<resources>
    <string name="app_name">In And Out</string>
    <string name="place_an_order">Place an Order</string>
    <string name="double_double">Double Double $3.60</string>
    <string name="cheeseburger">Cheeseburger $2.15</string>
    <string name="frenchfries">French Fries $1.65</string>
    <string name="shakes">Shakes $2.20</string>
    <string name="fountain_drinks">Fountain Drinks (pick size)</string>
    <string name="small">Small $1.45</string>
    <string name="medium">Medium $1.55</string>
    <string name="large">Large $1.75</string>
    <string name="place_order_button">PLACE ORDER</string>
    <string name="order_total_summary">Order total: </string>
    <string name="items_ordered_summary">Items ordered: </string>
    <string name="subtotal_summary">Subtotal: </string>
    <string name="tax_summary">Tax</string>
    <string name="new_order_summary">START NEW ORDER</string>
</resources>
