<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:columnCount="2"
            tools:context="edu.orangecoastcollege.cs273.phuynh101.inandout.OrderActivity">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/place_an_order"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/double_double"
        android:textAppearance="?android:textAppearanceMedium"/>

    <EditText
        android:id="@+id/doubleDoubleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_row="1"
        android:ems="10"
        android:inputType="number"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="2"
        android:text="@string/cheeseburger"
        android:textAppearance="?android:textAppearanceMedium"/>


    <EditText
        android:id="@+id/cheeseburgerEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_row="2"
        android:ems="10"
        android:inputType="number"/>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="3"
        android:text="@string/frenchfries"
        android:textAppearance="?android:textAppearanceMedium"/>

    <EditText
        android:id="@+id/frenchFriesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_row="3"
        android:ems="10"
        android:inputType="number"/>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="4"
        android:text="@string/shakes"
        android:textAppearance="?android:textAppearanceMedium"/>

    <EditText
        android:id="@+id/shakeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_row="4"
        android:ems="10"
        android:inputType="number"/>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/fountain_drinks"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="6"
        android:text="@string/small"
        android:textAppearance="?android:textAppearanceMedium"/>

    <EditText
        android:id="@+id/smallDrinkEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_row="6"
        android:ems="10"
        android:inputType="number"/>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="7"
        android:text="@string/medium"
        android:textAppearance="?android:textAppearanceMedium"/>

    <EditText
        android:id="@+id/mediumDrinkEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_row="7"
        android:ems="10"
        android:inputType="number"/>


    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="8"
        android:text="@string/large"
        android:textAppearance="?android:textAppearanceMedium"/>

    <EditText
        android:id="@+id/largeDrinkEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginLeft="10dp"
        android:layout_row="8"
        android:ems="10"
        android:inputType="number"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_row="9"
        android:onClick="placeOrderButton"
        android:text="@string/place_order_button"/>


</GridLayout>
